--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Bin Wu"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "An undergraduate student from Sun Yat-sen University"
   location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
+  employer         : "Sun Yat-sen University"
+  uri              : https://github.com/Charles-Wuxxx
   email            : "none@example.org" 
 
   # Academic websites
